# inspyred-hints

./: .gitignore  LICENSE  example.py  pyproject.toml
examples/: example1.py
inspyred_hints/: __init__.py
inspyred_hints/common/: __init__.py
inspyred_hints/common/interactive/: __init__.py
inspyred_hints/integrations/: base_classes.py
