[tool.poetry]
name = "inspyred-hints"
version = "0.1.0"
description = ""
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
sourcery = "^1.14.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
